force-app/main/default/objects/SBQQ__SubscribedQuoteLine__c/fields/SBQQ__Quote__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the quote for the quoteLines.</description>
    <inlineHelpText>Identifies the quote for the quoteLines.</inlineHelpText>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Quote</relationshipLabel>
    <relationshipName>Quote</relationshipName>
    <type>Lookup</type>
</CustomField>